Windowsだけ游ゴシックを使う

--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -1,4 +1,8 @@
 // ==================
+// font
+$body-font-family: "Roboto", "Helvetica Neue", "Arial", "ヒラギノ角ゴ ProN", "Hiragino Kaku Gothic ProN", "Hiragino Sans", "YuGothic", "Yu Gothic", "Meiryo", sans-serif;
+
+// ==================
 // color
 $green-1: #008830;
 $green-2: #00b849;
