--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -1,5 +1,6 @@
 // ==================
 // font
+$font-size-root: 10px;
 $body-font-family: "Roboto", "Helvetica Neue", "Arial", "ヒラギノ角ゴ ProN", "Hiragino Kaku Gothic ProN", "Hiragino Sans", "YuGothic", "Yu Gothic", "Meiryo", sans-serif;
 
 // ==================
