印刷した時にナビゲーションなど非表示にする

--- a/assets/global.scss
+++ b/assets/global.scss
@@ -44,3 +44,10 @@ img {
   display: block !important;
   visibility: visible !important;
 }
+
+@media print {
+  .naviContainer,
+  .MainPage {
+    display: none !important;
+  }
+}
