--- a/assets/global.scss
+++ b/assets/global.scss
@@ -53,4 +53,7 @@ img {
   .v-data-table__wrapper {
     height: 100% !important;
   }
+  .DataCard {
+    page-break-after: always !important;
+  }
 }
