--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -5,17 +5,17 @@ $body-font-family: "Roboto", "Helvetica Neue", "Arial", "ヒラギノ角ゴ ProN
 
 // ==================
 // color
-$green-1: #008830;
+$green-1: #039235;
 $green-2: #00b849;
 $green-3: #00d154;
 $green-4: #00eb5e;
 $gray-1: #333;
-$gray-2: #4d4d4d;
+$gray-2: #404040;
 $gray-3: #707070;
 $gray-4: #d9d9d9;
-$gray-5: #f8f9fa;
+$gray-5: #fbfbfb;
 $white: #fff;
-$link: #006ca8;
+$link: #006399;
 $emergency: #FFE200;
 $alert: #AD2121;
 
