--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -5,7 +5,7 @@ $body-font-family: "Roboto", "Helvetica Neue", "Arial", "ヒラギノ角ゴ ProN
 
 // ==================
 // color
-$green-1: #039235;
+$green-1: #03832D;
 $green-2: #00b849;
 $green-3: #00d154;
 $green-4: #00eb5e;
